add space for future content clean up code

--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Hayden Hartley – Undergraduate Engineer</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hayden Hartley – Undergraduate Engineer</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Quicksand" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/minireset.min.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/animations.css">
-<script defer type="text/javascript" src="js/main.js"></script>
-<script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
+    <script defer type="text/javascript" src="js/main.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
 </head>
 <body>
 <div id="wallpaper" class="wallpaper" data-image="images/wallpaper.jpg">></div>
-<div class="content">
+<div id="homepage" class="homepage" style="height: auto;">
     <aside class="side">
         <figure id="picture" class="picture">
             <div class="picture-shadow"></div>
@@ -42,13 +42,15 @@
         <hr class="hr">
         <div class="description">
             <p>
-               I am an undergraduate Electrical Engineering & Information Technology student
+                I am an undergraduate Electrical Engineering & Information Technology student
                 currently studying at James Cook University Townsville,
             </p>
             <p class="spacing-paragraph">
                 During my degree I have studied various subjects including...
-                My goal is to further my knowledge in all fields of study, while developing new applications to showcase my skills and passions.
-                This website was made as an example of one of many skills developed throughout my studying years while also expanding my web development knowledge
+                My goal is to further my knowledge in all fields of study, while developing new applications to showcase
+                my skills and passions.
+                This website was made as an example of one of many skills developed throughout my studying years while
+                also expanding my web development knowledge
             </p>
             <p>
                 I am proficient in...while also having knowledge in...
@@ -57,8 +59,8 @@
         <div class="contact">
             <ul class="social">
                 <li>
-                    <a>
-                        <i class="fab fa-linkedin"></i>
+                    <a href="https://www.linkedin.com/in/hayden-hartley">
+                        <i class="fab fa-linkedin" ></i>
                     </a>
                 </li>
                 <li>
@@ -74,10 +76,59 @@
             </ul>
             <a class="button" href="mailto:hayden.hartley25@gmail.com">
                 <i class="far fa-envelope"></i>
-                 Email me
+                Email me
             </a>
         </div>
     </main>
+    <a id="scroll" class="scroll" href="#content"></a>
 </div>
+<div id="content" class="content">
+    <h1 class="content-header">Engineering Projects</h1>
+</div>
+<div class="content">
+    <h1 class="content-header">Developer Projects</h1>
+</div>
+<div class="content">
+    <h1 class="content-header">Design Projects</h1>
+</div>
+<footer class="footer">
+    <div class="contact">
+        <ul class="social">
+            <li>
+                <a>
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </li>
+            <li>
+                <a>
+                    <i class="fab fa-github"></i>
+                </a>
+            </li>
+            <li>
+                <a>
+                    <i class="fab fa-stack-overflow"></i>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <p>
+        For any enquiries feel free to email me at
+        <a class="link" href="mailto:hayden.hartley25@gmail.com">hayden.hartley25@gmail.com</a>
+    </p>
+    <hr class="hr">
+    <span class="footer-text">
+        Webpage design inspired by
+        <a class="link" href="https://jgthms.com/css-in-44-minutes-ebook">CSS in 44 minutes</a> by Jeremy Thomas
+    </span>
+    <span class="footer-text">
+        Background image by
+        <a class="link" href="https://unsplash.com/photos/mbXEkW5ZyBQ">Magnus Engø</a>, sourced from
+        <a class="link" href="https://unsplash.com/">Unsplash</a>
+    </span>
+    <span class="footer-text">
+        Icons by
+        <a class="link" href="https://fontawesome.com/">Font Awesome</a>
+    </span>
+</footer>
 </body>
 </html>
